Match spacing of sections below 4D Spatial to sections above, make forecasting/planning GIFs bigger (1400px), fix Additional Experimental Results images to match Technical Analysis size (1200px)

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -185,7 +185,7 @@ img {
   position: relative;
   display: inline-block;
   width: 100%;
-  max-width: 100%;
+  max-width: 1400px;
   margin: 1.5rem auto;
   cursor: pointer;
 }
